MET-840 updated pom file